--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 								<span class="icon-bar"></span>
 							</button>
 
-							<a class="" href="#home"><img src="images/tropicanaLogo.png" alt="Tropicana" height="58" width="145"></img></a>
+							<a class="" href="#home"><img src="images/TropicanaLogo.png" alt="Tropicana" height="58" width="145"></img></a>
 						</div>
 						<div id="navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav">
