--- a/contact.html
+++ b/contact.html
@@ -66,8 +66,14 @@
 		<div class="content-wrapper">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col-xs-12">
+					<div class="col-xs-offset-3 col-xs-7">
 						<h1>Contact Us</h1>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-xs-12">
+						<p><strong>949 North Cataract Ave, San Dimas, CA 91733</strong><br>
+						<strong>(909)599-4211<strong></p>
 					</div>
 				</div>
 				<div class="row">
@@ -75,8 +81,9 @@
 						<p>We would love to hear from you! Please fill out this form and one of our representatives will get in touch with you shortly.</p>
 					</div>
 				</div>
+				
 				<div class="row">
-					<div class="col-xs-4">
+					<div class="col-md-4 col-xs-12">
 						<form role="form" action="mailto:romero4742@hotmail.com" method="post">
 							<div class="form-group">
 								<label class="control-label col-xs-2" for="name">Name</label>
@@ -108,76 +115,32 @@
 
 							<div class="form-group">
 								<div class="col-xs-offset-2 col-xs-10">
-									<button type="submit" class="btn btn-default">Submit</button>
+									<button type="submit" id= class="btn btn-default">Submit</button>
 								</div>
 							</div>
 						</form>
 					</div>
 
-					<div id="map-container" class="col-xs-6">
-						<script src="http://maps.google.com/maps/api/js"></script>
-						<script>
-							function init_map(){
-								var var_location = new google.maps.LatLng(34.119265, -117.812865);
-
-								var var_mapoptions = {
-									center: var_location,
-									zoom: 14
-								};
-
-								var var_marker = new google.maps.Marker({
-									position: var_location,
-									map: var_map,
-									title: "Tropicana Outdoor Living"
-								});
-
-								var var_map = new google.maps.Map(document.getElementById("map-container"),
-									var_mapoptions);
-
-								var_marker.setMap(var_map);
-							}
-
-							google.maps.event.addDomListener(window,'load',init_map);
-						</script>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-xs-offset-4 col-xs-6">
-						<div class="form">
-							<div class="form-group">
-								<label class="control-label" for="directions-input">Take me to Tropicana</label>
-								<input type="text" class="manual-location form-control" id="directions-input" placeholder="Starting location">
+					<div class="col-md-6 col-xs-12">
+						<div class="row">
+							<div class="col-xs-12">
+								<h4>Schedule an appointment and visit our shop! Get directions below.</h4>
 							</div>
+							<div class="col-xs-12">
+								<iframe 
+								width="100%"
+								height="400px"
+								frameborder="0"
+								style="border:0"
+								src='https://www.google.com/maps/embed/v1/directions?key=AIzaSyAOj9jil-y0kJhGMw3KdvsJQWUxhNtuA8k&origin=Tropicana+outdoor+living&destination=Tropicana+Outdoor+Living'>
+								</iframe>
+							</div>	
+
 						</div>
-
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-xs-offset-6 col-xs-4">
-						<button type="button" class="btn btn-default" id="target">Get Directions</button>
-					</div>
-				</div>
-				<script>
-
-				<!-- This is not working need to fix the link from button to jquery -->
-				$(document).ready(function(){
-
-					console.log("test")
-
-								var startingLocation;
-								var destination = "Tropicana Outdoor Living";
-
-								$("#target").click(function(){
-									console.log("test");
-								});
-
-							function goToGoogleMaps(startingLocation, destination) {
-								window.location = "https://maps.google.com/maps?saddr=" + startingLocation + "&daddr=" + destination;
-							}
-
-				});
-				</script>
-
+				
+			<!-- end container fluid -->	
 			</div>
 		</div>
 
