updated contact layout, fixed take me to tropicana button, changed font color, changed sidebar width for grills.html

--- a/grills.html
+++ b/grills.html
@@ -66,9 +66,9 @@
 		<!-- Side Menu -->
 		<div class ="my-side-nav hidden-md hidden-sm hidden-xs">
 			 <ul class="nav nav-tabs nav-stacked span3">
-			 	<li class="side-nav1 active"><a href="#lion" onclick="navActive(this);return true;"><img src="images/lion/lion-grills.png" alt="Lion Grills" width="200px" height="100px"></a></li>
-			 	<li class="side-nav2"><a href="#cal-flame" onclick="navActive(this);return true;"><img src="images/calflame_logo.png" alt="Cal Flame" width="200px" height="90px"></a></li>
-			 	<li class="side-nav3"><a href="#fire-magic" onclick="navActive(this);return true;"><img src="images/fire-magic.jpg" alt="Fire Magic" width="200px" height="90px"></a></li>
+			 	<li class="side-nav1 active"><a href="#lion" ><img src="images/lion/lion-grills.png" alt="Lion Grills" width="170px" height="90px"></a></li>
+			 	<li class="side-nav2"><a href="#cal-flame"><img src="images/calflame_logo.png" alt="Cal Flame" width="170px" height="80px"></a></li>
+			 	<li class="side-nav3"><a href="#fire-magic" ><img src="images/fire-magic.jpg" alt="Fire Magic" width="170px" height="80px"></a></li>
 			 </ul>
 		</div>
 		<!-- end Side Menu -->
@@ -77,10 +77,10 @@
 			<div class="container-fluid">
 				<div class="grills-container">
 				<!-- Lion -->
-				<div id="lion" data-anchor="lion">
+				<div  data-anchor="lion">
 					<div class = "row">
 						<div class="col-xs-offset-5 col-xs-6 col-lg-offset-4 col-lg-8">
-							<h1 class="grill-header">Lion</h1>
+							<h1 id="lion" class="grill-header">Lion</h1>
 						</div>
 					</div>
 					<div class="row">
@@ -118,9 +118,9 @@
 				<!-- End Lion -->
 
 				<!-- Cal Flame -->
-				<div class="row" id="cal-flame" data-anchor="cal-flame">
+				<div class="row" data-anchor="cal-flame">
 					<div class="col-xs-offset-5 col-lg-offset-4 col-lg-8">
-						<h1>Cal Flame</h1>
+						<h1 id="cal-flame">Cal Flame</h1>
 					</div>
 				</div>
 				<div class="row calflame-container">
