Updated grills page

--- a/grills.html
+++ b/grills.html
@@ -91,13 +91,11 @@
 				</div>
 				<div class="lion-container">
 				<div class="row">
-					<div class="col-xs-offset-2 col-sm-offset-1 col-sm-5 col-xs-10">
-						<img class=".img-responsive" src="images/lion/lion-l75000.png" alt="model l75000" width="350" height="220">
+					<div class="col-xs-offset-1 col-md-5 col-xs-6">
+						<img class=".img-responsive" src="images/lion/lion-l75000.png" alt="model l75000" width="320" height="200">
 					</div>
-					<div class="col-xs-offset-2 col-sm-offset-1 col-sm-5 col-xs-10">
-						<img class=".img-responsive" src="images/lion/lion-l90000.png" alt="model l90000" width="350" height="220">
-					</div>
-					<div class="col-xs-offset-2 col-sm-offset-1 col-sm-6 col-xs-10">
+					<!-- visible only for sm and xs -->
+					<div class="hidden-md hidden-lg col-xs-5">
 						<ul>
 							<li>Size: 32"</li>
 							<li>4 Stainless steel burners</li>
@@ -105,7 +103,28 @@
 							<li><a href="lion-l75000.html">Learn More</a></li>
 						</ul>
 					</div>
-					<div class="col-xs-offset-2 col-sm-offset-0 col-sm-5 col-xs-10">
+					<div class="col-xs-offset-1 col-xs-6 col-md-5">
+						<img class=".img-responsive" src="images/lion/lion-l90000.png" alt="model l90000" width="320" height="200">
+					</div>
+
+					<!--visible only for sm and xs -->
+					<div class="hidden-md hidden-lg  col-sm-5 col-xs-5">
+						<ul>
+							<li>Size: 40"</li>
+							<li>5 Stainless steel burners</li>
+							<li>CSA certified</li>
+							<li><a href="lion-l90000.html">Learn More</a></li>
+						</ul>
+					</div>
+					<div class="hidden-xs hidden-sm col-md-offset-1 col-md-6">
+						<ul>
+							<li>Size: 32"</li>
+							<li>4 Stainless steel burners</li>
+							<li>CSA certified</li>
+							<li><a href="lion-l75000.html">Learn More</a></li>
+						</ul>
+					</div>
+					<div class="hiden-xs hidden-sm col-md-offset-0 col-md-5">
 						<ul>
 							<li>Size: 40"</li>
 							<li>5 Stainless steel burners</li>
@@ -143,7 +162,7 @@
 							<img class=".img-responsive" src="images/calflame/3-burner-drop-in-grill.jpg" alt="3 Burner Drop-in Grill" width="250" height="225">
 						</div>
 						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class=".img-responsive" src="images/calflame/5-burner-g5.jpg" alt="5 Burner G5" width="250" height="225">
+							<img class=".img-responsive" src="images/calflame/5-burner-G5.jpg" alt="5 Burner G5" width="250" height="225">
 						</div>
 						<div class="col-lg-3 col-md-3 col-xs-6">
 							<img class=".img-responsive" src="images/calflame/4-burner-convection-g4.jpg" alt="4 Burner Convection with Rostisserie" width="250" height="225">
