fixed responsive bug

--- a/grills.html
+++ b/grills.html
@@ -92,7 +92,7 @@
 				<div class="lion-container">
 				<div class="row">
 					<div class="col-xs-offset-1 col-md-5 col-xs-6">
-						<img class=".img-responsive" src="images/lion/lion-l75000.png" alt="model l75000" width="320" height="200">
+						<img class="img-responsive" src="images/lion/lion-l75000.png" alt="model l75000" width="320" height="200">
 					</div>
 					<!-- visible only for sm and xs -->
 					<div class="hidden-md hidden-lg col-xs-5">
@@ -104,7 +104,7 @@
 						</ul>
 					</div>
 					<div class="col-xs-offset-1 col-xs-6 col-md-5">
-						<img class=".img-responsive" src="images/lion/lion-l90000.png" alt="model l90000" width="320" height="200">
+						<img class="img-responsive" src="images/lion/lion-l90000.png" alt="model l90000" width="320" height="200">
 					</div>
 
 					<!--visible only for sm and xs -->
@@ -144,36 +144,36 @@
 				</div>
 				<div class="row calflame-container">
 					<div class="col-lg-3 col-md-3 col-xs-6">
-						<img class=".img-responsive" src="images/calflame/4-burner-premium.jpg" alt="4 Burner Premium" width="250" height="220">
+						<img class="img-responsive" src="images/calflame/4-burner-premium.jpg" alt="4 Burner Premium" width="250" height="220">
 					</div>
 					<div class="col-lg-3 col-md-3 col-xs-6">
-						<img class=".img-responsive" src="images/calflame/5-burner-Top-Gun.jpg" alt="5 Burner Top Gun" width="250" height="225">
+						<img class="img-responsive" src="images/calflame/5-burner-Top-Gun.jpg" alt="5 Burner Top Gun" width="250" height="225">
 					</div>	
 					<div class="col-lg-3 col-md-3 col-xs-6">
-						<img class=".img-responsive" src="images/calflame/5-burner-convection.jpg" alt="5 Burner Convection" width="250" height="225">
+						<img class="img-responsive" src="images/calflame/5-burner-convection.jpg" alt="5 Burner Convection" width="250" height="225">
 					</div>
 					<div class="col-lg-3 col-md-3 col-xs-6">
-						<img class=".img-responsive" src="images/calflame/4-burner-convection.jpg" alt="4 Burner Convection" width="250" height="225">
+						<img class="img-responsive" src="images/calflame/4-burner-convection.jpg" alt="4 Burner Convection" width="250" height="225">
 					</div>
 				</div>
 				<div class="calflame-container">
 					<div class="row">
 						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class=".img-responsive" src="images/calflame/3-burner-drop-in-grill.jpg" alt="3 Burner Drop-in Grill" width="250" height="225">
+							<img class="img-responsive" src="images/calflame/3-burner-drop-in-grill.jpg" alt="3 Burner Drop-in Grill" width="250" height="225">
 						</div>
 						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class=".img-responsive" src="images/calflame/5-burner-G5.jpg" alt="5 Burner G5" width="250" height="225">
+							<img class="img-responsive" src="images/calflame/5-burner-G5.jpg" alt="5 Burner G5" width="250" height="225">
 						</div>
 						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class=".img-responsive" src="images/calflame/4-burner-convection-g4.jpg" alt="4 Burner Convection with Rostisserie" width="250" height="225">
+							<img class="img-responsive" src="images/calflame/4-burner-convection-g4.jpg" alt="4 Burner Convection with Rostisserie" width="250" height="225">
 						</div>
 						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class=".img-responsive" src="images/calflame/3-burner-g3.jpg" alt="3 Burner G3" width="250" height="225">
+							<img class="img-responsive" src="images/calflame/3-burner-g3.jpg" alt="3 Burner G3" width="250" height="225">
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-lg-3 col-md-3 col-xs-12">
-							<img class=".img-responsive" src="images/calflame/charcoal-grill.jpg" alt="Charcoal Grill" width="250" height="225">
+							<img class="img-responsive" src="images/calflame/charcoal-grill.jpg" alt="Charcoal Grill" width="250" height="225">
 						</div>
 					</div>
 				</div>
@@ -186,44 +186,44 @@
 					</div>
 					<div class="row">
 						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class=".img-responsive" src="images/firemagic/deluxe-gourmet-countertop.jpg" alt="Deluxe Gourmet Countertop" width="250" height="225">
+							<img class="img-responsive" src="images/firemagic/deluxe-gourmet-countertop.jpg" alt="Deluxe Gourmet Countertop" width="250" height="225">
 						</div>
 						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class=".img-responsive" src="images/firemagic/regal-countertop.jpg" alt="Regal Countertop" width="250" height="225">
+							<img class="img-responsive" src="images/firemagic/regal-countertop.jpg" alt="Regal Countertop" width="250" height="225">
 						</div>
 						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class=".img-responsive" src="images/firemagic/custom-charcoal.jpg" alt="Custom Charcoal" width="250" height="225">
+							<img class="img-responsive" src="images/firemagic/custom-charcoal.jpg" alt="Custom Charcoal" width="250" height="225">
 						</div>
 						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class=".img-responsive" src="images/firemagic/deluxe-gourmet-builtin.jpg" alt="Deluxe Gourmet Builtin" width="250" height="225">
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class=".img-responsive" src="images/firemagic/A790i.jpg" alt="" width="250" height="225">
-						</div>
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class=".img-responsive" src="images/firemagic/E1060i.jpg" alt="" width="250" height="225">
-						</div>
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class=".img-responsive" src="images/firemagic/echelon-diamond.jpg" alt="Echelon Diamond Series" width="250" height="225">
-						</div>
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class=".img-responsive" src="images/firemagic/aurora-series.jpg" alt="" width="250" height="225">
+							<img class="img-responsive" src="images/firemagic/deluxe-gourmet-builtin.jpg" alt="Deluxe Gourmet Builtin" width="250" height="225">
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class=".img-responsive" src="images/firemagic/charcoal-series.jpg" alt="Charcoal Series" width="250" height="225">
+							<img class="img-responsive" src="images/firemagic/A790i.jpg" alt="" width="250" height="225">
 						</div>
 						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class=".img-responsive" src="images/firemagic/legacy-grills.jpg" alt="Legacy Grills" width="250" height="225">
+							<img class="img-responsive" src="images/firemagic/E1060i.jpg" alt="" width="250" height="225">
 						</div>
 						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class=".img-responsive" src="images/firemagic/electric-grills.jpg" alt="Electric Grills" width="250" height="225">
+							<img class="img-responsive" src="images/firemagic/echelon-diamond.jpg" alt="Echelon Diamond Series" width="250" height="225">
 						</div>
 						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class=".img-responsive" src="images/firemagic/" alt="" width="250" height="225">
+							<img class="img-responsive" src="images/firemagic/aurora-series.jpg" alt="" width="250" height="225">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-3 col-md-3 col-xs-6">
+							<img class="img-responsive" src="images/firemagic/charcoal-series.jpg" alt="Charcoal Series" width="250" height="225">
+						</div>
+						<div class="col-lg-3 col-md-3 col-xs-6">
+							<img class="img-responsive" src="images/firemagic/legacy-grills.jpg" alt="Legacy Grills" width="250" height="225">
+						</div>
+						<div class="col-lg-3 col-md-3 col-xs-6">
+							<img class="img-responsive" src="images/firemagic/electric-grills.jpg" alt="Electric Grills" width="250" height="225">
+						</div>
+						<div class="col-lg-3 col-md-3 col-xs-6">
+							<img class="img-responsive" src="images/firemagic/" alt="" width="250" height="225">
 						</div>
 					</div>
 				</div>
