fixed hidden-xs bug

--- a/grills.html
+++ b/grills.html
@@ -124,7 +124,7 @@
 							<li><a href="lion-l75000.html">Learn More</a></li>
 						</ul>
 					</div>
-					<div class="hiden-xs hidden-sm col-md-offset-0 col-md-5">
+					<div class="hidden-xs hidden-sm col-md-offset-0 col-md-5">
 						<ul>
 							<li>Size: 40"</li>
 							<li>5 Stainless steel burners</li>
