fixed responsive carousel

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
 			<div class="carousel-inner">
 				<div class="item active" id="slide1">
+					<img class="img-responsive" src="images/lg-images/sandiego2.jpg">
 					<div class="carousel-caption">
 						<h4 class="lead-header">BBQ Islands, Grills and Spas </h4>
 						<p class="lead">Add value and entertainment to your backyard with one of our BBQ island designs.</p>
@@ -80,6 +81,7 @@
 					</div>
 				</div>
 				<div class="item" id="slide2">
+					<img class="img-responsive" src="images/lg-images/sandiego2.jpg">
 					<div class="carousel-caption">
 						<h4 class="lead-header">BBQ Islands, Grills and Spas </h4>
 						<p class="lead">Add value and entertainment to your backyard with one of our BBQ island designs.</p>
@@ -87,6 +89,7 @@
 					</div>
 				</div>
 				<div class="item" id="slide3">
+					<img class="img-responsive" src="images/lg-images/sandiego2.jpg">
 					<div class="carousel-caption">
 						<h4 class="lead-header">BBQ Islands, Grills and Spas </h4>
 						<p class="lead">Add value and entertainment to your backyard with one of our BBQ island designs.</p>
