--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					</div>
 				</div>
 				<div class="item" id="slide2">
-					<img class="img-responsive" src="images/lg-images/sandiego2.jpg">
+					<img class="img-responsive" src="images/lg-images/diamond_bar.jpg">
 					<div class="carousel-caption">
 						<h4 class="lead-header">BBQ Islands, Grills and Spas </h4>
 						<p class="lead">Add value and entertainment to your backyard with one of our BBQ island designs.</p>
@@ -89,7 +89,7 @@
 					</div>
 				</div>
 				<div class="item" id="slide3">
-					<img class="img-responsive" src="images/lg-images/sandiego2.jpg">
+					<img class="img-responsive" src="images/lg-images/coronado.jpg">
 					<div class="carousel-caption">
 						<h4 class="lead-header">BBQ Islands, Grills and Spas </h4>
 						<p class="lead">Add value and entertainment to your backyard with one of our BBQ island designs.</p>
@@ -104,18 +104,24 @@
 		<div class="container marketing">
 			<div class="row">
 				<div class="col-lg-4">
-					<img class="img-circle" src="images/palapa1.png" alt="BBQs and Palapas" width="200" height="175">
-					<h1>BBQ Islands</h1>
+					<a href="" style="color: inherit; text-decoration: none;">
+						<img class="img-circle" src="images/palapa1.png" alt="BBQs and Palapas" width="200" height="175">
+						<h1>BBQ Islands</h1>
+					</a>
 					<p>Cal Flame outdoor kitchens add value, entertainment and living space to your home. Choose your barbecue island designs in various configurations to complement your personal Home Resort design, lifestyle and backyard or garden arrangement.</p>
 				</div>
 				<div class="col-lg-4">
-					<img class="img-circle" src="images/grill1.png" alt="Grill" width="200" height="175">
-					<h1>Grills</h1>
+					<a href="grills.html" style="color:inherit; text-decoration: none;">
+						<img class="img-circle" src="images/grill1.png" alt="Grill" width="200" height="175">
+						<h1>Grills</h1>
+					</a>
 					<p>Cal Flame Grills are the hottest looking grills on the market, and the best performing. With designer knobs, exclusive V-shaped grates and polished stainless steel construction, looks alone can sear your steak.</p>
 				</div>
 				<div class="col-lg-4">
-					<img class="img-circle" src="images/spas.jpg" alt="Spas" width="200" height="175">
-					<h1>Spas</h1>
+					<a href="spas.html" style="color:inherit; text-decoration: none;">
+						<img class="img-circle" src="images/spas.jpg" alt="Spas" width="200" height="175">
+						<h1>Spas</h1>
+					</a>
 					<p>Cal Spas offers a private sanctuary from the stresses of the day. Luxury hot tubs and discount spas take you away with rejuvenating hydrotherapy and are designed to complement your Home Resort lifestyle at a remarkable value. </p>
 				</div>
 			</div>
