--- a/index.html
+++ b/index.html
@@ -34,20 +34,38 @@
 						<div id="navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav">
                 				<li class="active"><a href="#home">Home</a></li>
-                				<li class="dropdown"><a href="grills.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
+                				<li class="dropdown hidden-xs"><a href="grills.html"role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
+                					<ul class="dropdown-menu">
+                						<li><a href="grills.html#lion">Lion</a></li>
+                						<li><a href="grills.html#cal-flame">Cal Flame</a></li>
+                						<li><a href="grills.html#fire-magic">Fire Magic</a></li>
+                					</ul>
+                				<li class="dropdown hidden-lg hidden-md hidden-sm"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="grills.html#lion">Lion</a></li>
                 						<li><a href="grills.html#cal-flame">Cal Flame</a></li>
                 						<li><a href="grills.html#fire-magic">Fire Magic</a></li>
                 					</ul>
                 				</li>
-                				<li class="dropdown"><a href="patio.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Patio<span class="caret"></span></a>
+                				<li class="dropdown hidden-lg hidden-md hidden-sm"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Patio<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="patio.html#darlee">Darlee</a></li>
                 						<li><a href="patio.html#summerset">Summerset</a></li>
                 					</ul>
                 				</li>
-                				<li class="dropdown"><a href="spas.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Spas<span class="caret"></span></a>
+                				<li class="dropdown hidden-xs"><a href="patio.html"  role="button" aria-haspopup="true" aria-expanded="false">Patio<span class="caret"></span></a>
+                					<ul class="dropdown-menu">
+                						<li><a href="patio.html#darlee">Darlee</a></li>
+                						<li><a href="patio.html#summerset">Summerset</a></li>
+                					</ul>
+                				</li>
+                				<li class="dropdown hidden-sm hidden-md hidden-lg"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Spas<span class="caret"></span></a>
+                					<ul class="dropdown-menu">
+                						<li><a href="swim-spas.html">Swim Spas</a></li>
+                						<li><a href="cal-spas.html">Cal Spas</a></li>
+                					</ul>
+                				</li>
+                				<li class="dropdown hidden-xs"><a href="spas.html" role="button" aria-haspopup="true" aria-expanded="false">Spas<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="swim-spas.html">Swim Spas</a></li>
                 						<li><a href="cal-spas.html">Cal Spas</a></li>
