updated grills and lion75000

--- a/grills.html
+++ b/grills.html
@@ -19,7 +19,7 @@
 		<!-- Begin Navbar -->
 		<div class="navbar-wrapper" id="home">
 			<div class="container">
-				<nav id="main-nav" class="navbar navbar-inverse navbar-top">
+				<nav id="main-nav" class="navbar navbar-inverse navbar-fixed-top">
 					<div class="container">
 						<div class="navbar-header">
 							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -29,25 +29,43 @@
 								<span class="icon-bar"></span>
 							</button>
 
-							<a class="" href="index.html#home"><img src="images/TropicanaLogo.png" alt="Tropicana" height="58" width="145"></img></a>
+							<a class="" href="index.html"><img src="images/TropicanaLogo.png" alt="Tropicana" height="58" width="145"></img></a>
 						</div>
 						<div id="navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav">
                 				<li><a href="index.html">Home</a></li>
-                				<li class="active dropdown"><a href="grills.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
+                				<li class="active dropdown hidden-xs"><a href="grills.html"role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
+                					<ul class="dropdown-menu">
+                						<li><a href="grills.html#lion">Lion</a></li>
+                						<li><a href="grills.html#cal-flame">Cal Flame</a></li>
+                						<li><a href="grills.html#fire-magic">Fire Magic</a></li>
+                					</ul>
+                				<li class="active dropdown hidden-lg hidden-md hidden-sm"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="grills.html#lion">Lion</a></li>
                 						<li><a href="grills.html#cal-flame">Cal Flame</a></li>
                 						<li><a href="grills.html#fire-magic">Fire Magic</a></li>
                 					</ul>
                 				</li>
-                				<li class="dropdown"><a href="patio.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Patio<span class="caret"></span></a>
+                				<li class="dropdown hidden-lg hidden-md hidden-sm"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Patio<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="patio.html#darlee">Darlee</a></li>
                 						<li><a href="patio.html#summerset">Summerset</a></li>
                 					</ul>
                 				</li>
-                				<li class="dropdown"><a href="spas.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Spas<span class="caret"></span></a>
+                				<li class="dropdown hidden-xs"><a href="patio.html"  role="button" aria-haspopup="true" aria-expanded="false">Patio<span class="caret"></span></a>
+                					<ul class="dropdown-menu">
+                						<li><a href="patio.html#darlee">Darlee</a></li>
+                						<li><a href="patio.html#summerset">Summerset</a></li>
+                					</ul>
+                				</li>
+                				<li class="dropdown hidden-sm hidden-md hidden-lg"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Spas<span class="caret"></span></a>
+                					<ul class="dropdown-menu">
+                						<li><a href="swim-spas.html">Swim Spas</a></li>
+                						<li><a href="cal-spas.html">Cal Spas</a></li>
+                					</ul>
+                				</li>
+                				<li class="dropdown hidden-xs"><a href="spas.html" role="button" aria-haspopup="true" aria-expanded="false">Spas<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="swim-spas.html">Swim Spas</a></li>
                 						<li><a href="cal-spas.html">Cal Spas</a></li>
@@ -75,11 +93,11 @@
 
 		<div class="content-wrapper">
 			<div class="container-fluid">
-				<div class="grills-container">
+				<div class="margin-right">
 				<!-- Lion -->
 				<div  data-anchor="lion">
 					<div class = "row">
-						<div class="col-xs-offset-5 col-xs-6 col-lg-offset-4 col-lg-8">
+						<div class="col-xs-offset-4 col-xs-6 col-sm-offset-5 col-lg-8">
 							<h1 id="lion" class="grill-header">Lion</h1>
 						</div>
 					</div>
@@ -93,10 +111,12 @@
 
 					<!-- row for xs and sm screens-->
 					<div class="row hidden-md hidden-lg ">
-						<div class="col-xs-offset-1 col-xs-6">
-							<img src="images/lion/lion-l75000.png" alt="model l75000" width="320" height="200" class="img-responsive">
+						<div class="col-xs-offset-1">
+							<div class="col-xs-5 nopadding">
+								<img src="images/lion/lion-l75000.png" alt="model l75000" width="320" height="200" class="img-responsive">
+							</div>
 						</div>
-						<div class="col-xs-5">
+						<div class="col-xs-6 nopadding">
 							<ul>
 								<li>Size: 32"</li>
 								<li>4 Stainless steel burners</li>
@@ -106,10 +126,12 @@
 						</div>
 					</div>
 					<div class="row hidden-md hidden-lg top-buffer">
-						<div class="col-xs-offset-1 col-xs-6 ">
-							<img class="img-responsive" src="images/lion/lion-l90000.png" alt="model l90000" width="320" height="200">
+						<div class="col-xs-offset-1">
+							<div class="col-xs-5 nopadding">
+								<img class="img-responsive" src="images/lion/lion-l90000.png" alt="model l90000" width="320" height="200">
+							</div>
 						</div>
-						<div class="col-xs-5">
+						<div class="col-xs-6 nopadding">
 							<ul>
 								<li>Size: 40"</li>
 								<li>5 Stainless steel burners</li>
@@ -152,7 +174,7 @@
 
 				<!-- Cal Flame -->
 				<div class="row" data-anchor="cal-flame">
-					<div class="col-xs-offset-5 col-lg-offset-4 col-lg-8">
+					<div class="col-xs-offset-2 col-sm-offset-5 col-xs-9 col-lg-8">
 						<h1 id="cal-flame">Cal Flame</h1>
 					</div>
 				</div>
@@ -186,7 +208,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-lg-3 col-md-3 col-xs-12">
+						<div class="col-lg-3 col-md-3 col-xs-6">
 							<img class="img-responsive" src="images/calflame/charcoal-grill.jpg" alt="Charcoal Grill" width="250" height="225">
 						</div>
 					</div>
@@ -195,7 +217,7 @@
 
 				<!-- Fire Magic -->
 				<div class="firemagic-container" id="fire-magic" data-anchor="fire-magic">
-					<div class="col-xs-offset-5 col-lg-offset-4 col-lg-8">
+					<div class="col-xs-offset-1 col-sm-offset-4 col-xs-11 col-sm-8">
 						<h1>Fire Magic</h1>
 					</div>
 					<div class="row">
