--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 
 			<div class="carousel-inner">
 				<div class="item active" id="slide1">
-					<img class="img-responsive" src="images/lg-images/sandiego2.jpg">
+					<img class="img-responsive hidden-sm hidden-xs" src="images/lg-images/sandiego2.jpg">
+					<img class="img-responsive hidden-lg hidden-md" src="images/md-images/sandiego2.jpg">
 					<div class="carousel-caption">
 						<h4 class="lead-header">BBQ Islands, Grills and Spas </h4>
 						<p class="lead">Add value and entertainment to your backyard with one of our BBQ island designs.</p>
@@ -99,7 +100,8 @@
 					</div>
 				</div>
 				<div class="item" id="slide2">
-					<img class="img-responsive" src="images/lg-images/diamond_bar.jpg">
+					<img class="img-responsive hidden-sm hidden-xs" src="images/lg-images/diamond_bar.jpg">
+					<img class="img-responsive hidden-lg hidden-md" src="images/md-images/diamond_bar.jpg">
 					<div class="carousel-caption">
 						<h4 class="lead-header">BBQ Islands, Grills and Spas </h4>
 						<p class="lead">Add value and entertainment to your backyard with one of our BBQ island designs.</p>
@@ -107,7 +109,8 @@
 					</div>
 				</div>
 				<div class="item" id="slide3">
-					<img class="img-responsive" src="images/lg-images/coronado.jpg">
+					<img class="img-responsive hidden-sm hidden-xs" src="images/lg-images/coronado.jpg">
+					<img class="img-responsive hidden-lg hidden-md" src="images/md-images/coronado.jpg">
 					<div class="carousel-caption">
 						<h4 class="lead-header">BBQ Islands, Grills and Spas </h4>
 						<p class="lead">Add value and entertainment to your backyard with one of our BBQ island designs.</p>
