--- a/lion-l75000.html
+++ b/lion-l75000.html
@@ -29,25 +29,43 @@
 								<span class="icon-bar"></span>
 							</button>
 
-							<a class="" href="index.html"><img src="images/TropicanaLogo.png" alt="Tropicana" height="58" width="145"></img></a>
+							<a href="index.html"><img src="images/TropicanaLogo.png" alt="Tropicana" height="58" width="145"></img></a>
 						</div>
 						<div id="navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav">
-                				<li class=""><a href="index.html">Home</a></li>
-                				<li class="active dropdown"><a href="grills.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
+                				<li><a href="index.html">Home</a></li>
+                				<li class="active dropdown hidden-xs"><a href="grills.html"role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
+                					<ul class="dropdown-menu">
+                						<li><a href="grills.html#lion">Lion</a></li>
+                						<li><a href="grills.html#cal-flame">Cal Flame</a></li>
+                						<li><a href="grills.html#fire-magic">Fire Magic</a></li>
+                					</ul>
+                				<li class="active dropdown hidden-lg hidden-md hidden-sm"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="grills.html#lion">Lion</a></li>
                 						<li><a href="grills.html#cal-flame">Cal Flame</a></li>
                 						<li><a href="grills.html#fire-magic">Fire Magic</a></li>
                 					</ul>
                 				</li>
-                				<li class="dropdown"><a href="patio.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Patio<span class="caret"></span></a>
+                				<li class="dropdown hidden-lg hidden-md hidden-sm"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Patio<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="patio.html#darlee">Darlee</a></li>
                 						<li><a href="patio.html#summerset">Summerset</a></li>
                 					</ul>
                 				</li>
-                				<li class="dropdown"><a href="spas.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Spas<span class="caret"></span></a>
+                				<li class="dropdown hidden-xs"><a href="patio.html"  role="button" aria-haspopup="true" aria-expanded="false">Patio<span class="caret"></span></a>
+                					<ul class="dropdown-menu">
+                						<li><a href="patio.html#darlee">Darlee</a></li>
+                						<li><a href="patio.html#summerset">Summerset</a></li>
+                					</ul>
+                				</li>
+                				<li class="dropdown hidden-sm hidden-md hidden-lg"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Spas<span class="caret"></span></a>
+                					<ul class="dropdown-menu">
+                						<li><a href="swim-spas.html">Swim Spas</a></li>
+                						<li><a href="cal-spas.html">Cal Spas</a></li>
+                					</ul>
+                				</li>
+                				<li class="dropdown hidden-xs"><a href="spas.html" role="button" aria-haspopup="true" aria-expanded="false">Spas<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="swim-spas.html">Swim Spas</a></li>
                 						<li><a href="cal-spas.html">Cal Spas</a></li>
@@ -63,10 +81,44 @@
 		</div>
 		<!-- End Navbar-->
 
-		<div class="content-wrapper" style="padding-top:5%;">
-			<div class=" container-fluid">
+		<div class="content-wrapper">
+			<div class="container-fluid margin-right">
 				<div class="row">
-					<h1 class="col-md-8" style="font-weight:bold;">L75000 Grill</h1>
+					<div class="col-xs-12">
+						<h1 style="font-weight:bold; border-bottom:3px solid #EEE">L75000 Grills</h1>
+					</div>
+				</div>
+
+				<div class="row top-buffer">
+					<div class="col-xs-12 hidden visible-xs nopadding">
+						<img class="img-responsive" src="images/L75000_Premium_Grill_C.jpg" alt="L75000 Premium Grill">
+					</div>
+					<div class="col-xs-12 col-sm-6  nopadding">
+						<ul>
+							<li>4 cast stainless steel burners (75,000 total BTUs)</li>
+							<li>Lifetime warranty on cast burners</li>
+							<li>304-16 gauge commercial grade stainless steel construction</li>
+							<li>XL temperature gauge</li>
+							<li>Double layer seamless welded stainless steel smoker head with polished edges</li>
+							<li>830 sq. in. of cooking surface</li>
+							<li>5 Lion Quick Lite valves</li>
+							<li>Adjustable warming rack</li>
+							<li>Infrared rostisserie back burner</li>
+							<li>Stainless steel light switch</li>
+							<li>2 interior lights</li>
+							<li>Premium solid stainless steel cooking grates</li>
+							<li>5 commercial size push-to-turn knobs</li>
+							<li>Size: 32"</li>
+							<li>Includes Gourmet Package (Rostisserie - Cover - Smoker - Box - Griddle and Griddle Remover with Bottle Opener)</li>
+							<li>CSA certified for your safety</li>
+							<li><a href="">Lion L75000 Grill Spec Sheet</a></li>
+							<li><a href="">Lion L75000 Grill Manual</a></li>
+							<li><a href="">Rostisserie instruction manual</a></li>
+						</ul>
+					</div>
+					<div class="col-sm-6 hidden-xs nopadding">
+						<img class="img-responsive" src="images/L75000_Premium_Grill_C.jpg" alt="L75000 Premium Grill">
+					</div>
 
 				</div>
 			</div>
