finished lion bbqs, removed cal flame, added allegra

--- a/grills.html
+++ b/grills.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Specializes in BBQ Islands, Cal Flame Grills, and Cal Spas">
+		<meta name="description" content="Specializes in BBQ Islands, Allegra Grills, and Cal Spas">
     	<link rel="icon" href="images/tropicana_icon.png">
 
     	<title>Tropicana Outdoor Living</title>
@@ -37,13 +37,13 @@
                 				<li class="active dropdown hidden-xs"><a href="grills.html"role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="grills.html#lion">Lion</a></li>
-                						<li><a href="grills.html#cal-flame">Cal Flame</a></li>
+                						<li><a href="grills.html#allegra">Allegra</a></li>
                 						<li><a href="grills.html#fire-magic">Fire Magic</a></li>
                 					</ul>
                 				<li class="active dropdown hidden-lg hidden-md hidden-sm"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="grills.html#lion">Lion</a></li>
-                						<li><a href="grills.html#cal-flame">Cal Flame</a></li>
+                						<li><a href="grills.html#allegra">Allegra</a></li>
                 						<li><a href="grills.html#fire-magic">Fire Magic</a></li>
                 					</ul>
                 				</li>
@@ -85,7 +85,7 @@
 		<div class ="my-side-nav hidden-md hidden-sm hidden-xs">
 			 <ul class="nav nav-tabs nav-stacked span3">
 			 	<li class="side-nav1 active"><a href="#lion" ><img src="images/lion/lion-grills.png" alt="Lion Grills" width="170px" height="90px"></a></li>
-			 	<li class="side-nav2"><a href="#cal-flame"><img src="images/calflame_logo.png" alt="Cal Flame" width="170px" height="80px"></a></li>
+			 	<li class="side-nav2"><a href="#allegra"><img src="images/allegra_logo.png" alt="Allegra" width="170px" height="80px"></a></li>
 			 	<li class="side-nav3"><a href="#fire-magic" ><img src="images/fire-magic.jpg" alt="Fire Magic" width="170px" height="80px"></a></li>
 			 </ul>
 		</div>
@@ -172,48 +172,34 @@
 				</div>	
 				<!-- End Lion -->
 
-				<!-- Cal Flame -->
-				<div class="row" data-anchor="cal-flame">
+				<!-- Allegra -->
+				<div class="row" data-anchor="allegra">
 					<div class="col-xs-offset-2 col-sm-offset-5 col-xs-9 col-lg-8">
-						<h1 id="cal-flame">Cal Flame</h1>
+						<h1 id="allegra">Allegra</h1>
 					</div>
 				</div>
-				<div class="row calflame-container">
+				<div class="row allegra-container">
 					<div class="col-lg-3 col-md-3 col-xs-6">
-						<img class="img-responsive" src="images/calflame/4-burner-premium.jpg" alt="4 Burner Premium" width="250" height="220">
+						<img class="img-responsive" src="images/allegra/32-allegra-grill-rostisserie.jpg" alt="32 Allegra with Rostisserie" width="250" height="220">
+						<h4>32" Built-in Allegra Grill With Rostisserie</h4>
 					</div>
 					<div class="col-lg-3 col-md-3 col-xs-6">
-						<img class="img-responsive" src="images/calflame/5-burner-Top-Gun.jpg" alt="5 Burner Top Gun" width="250" height="225">
+						<img class="img-responsive" src="images/allegra/38-allegra-grill-rostisserie.jpg" alt="38 Allegra with Rostisserie" width="250" height="225">
 					</div>	
 					<div class="col-lg-3 col-md-3 col-xs-6">
-						<img class="img-responsive" src="images/calflame/5-burner-convection.jpg" alt="5 Burner Convection" width="250" height="225">
+						<img class="img-responsive" src="images/allegra/38-allegra-grill.jpg" alt="38 Allegra" width="250" height="225">
 					</div>
 					<div class="col-lg-3 col-md-3 col-xs-6">
-						<img class="img-responsive" src="images/calflame/4-burner-convection.jpg" alt="4 Burner Convection" width="250" height="225">
+						<img class="img-responsive" src="images/allegra/32-allegra-grill.jpg" alt="32 Allegra" width="250" height="225">
 					</div>
 				</div>
-				<div class="calflame-container">
+				<div class="allegra-container">
 					<div class="row">
 						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class="img-responsive" src="images/calflame/3-burner-drop-in-grill.jpg" alt="3 Burner Drop-in Grill" width="250" height="225">
-						</div>
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class="img-responsive" src="images/calflame/5-burner-G5.jpg" alt="5 Burner G5" width="250" height="225">
-						</div>
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class="img-responsive" src="images/calflame/4-burner-convection-g4.jpg" alt="4 Burner Convection with Rostisserie" width="250" height="225">
-						</div>
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class="img-responsive" src="images/calflame/3-burner-g3.jpg" alt="3 Burner G3" width="250" height="225">
+							<img class="img-responsive" src="images/allegra/26-allegra.jpg" alt="26 Allegra" width="250" height="225">
 						</div>
 					</div>
-					<div class="row">
-						<div class="col-lg-3 col-md-3 col-xs-6">
-							<img class="img-responsive" src="images/calflame/charcoal-grill.jpg" alt="Charcoal Grill" width="250" height="225">
-						</div>
-					</div>
-				</div>
-				<!-- end Cal Flame -->
+				<!-- end Allegra -->
 
 				<!-- Fire Magic -->
 				<div class="firemagic-container" id="fire-magic" data-anchor="fire-magic">
