--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Specializes in BBQ Islands, Cal Flame Grills, and Cal Spas">
+		<meta name="description" content="Specializes in BBQ Islands, Allegra Grills, and Cal Spas">
     	<link rel="icon" href="images/tropicana_icon.png">
 
     	<title>Tropicana Outdoor Living</title>
@@ -37,13 +37,13 @@
                 				<li class="dropdown hidden-xs"><a href="grills.html"role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="grills.html#lion">Lion</a></li>
-                						<li><a href="grills.html#cal-flame">Cal Flame</a></li>
+                						<li><a href="grills.html#cal-flame">Allegra</a></li>
                 						<li><a href="grills.html#fire-magic">Fire Magic</a></li>
                 					</ul>
                 				<li class="dropdown hidden-lg hidden-md hidden-sm"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
                 						<li><a href="grills.html#lion">Lion</a></li>
-                						<li><a href="grills.html#cal-flame">Cal Flame</a></li>
+                						<li><a href="grills.html#cal-flame">Allegra</a></li>
                 						<li><a href="grills.html#fire-magic">Fire Magic</a></li>
                 					</ul>
                 				</li>
@@ -129,14 +129,14 @@
 						<img class="img-circle" src="images/palapa1.png" alt="BBQs and Palapas" width="200" height="175">
 						<h1>BBQ Islands</h1>
 					</a>
-					<p>Cal Flame outdoor kitchens add value, entertainment and living space to your home. Choose your barbecue island designs in various configurations to complement your personal Home Resort design, lifestyle and backyard or garden arrangement.</p>
+					<p>Allegra outdoor kitchens add value, entertainment and living space to your home. Choose your barbecue island designs in various configurations to complement your personal Home Resort design, lifestyle and backyard or garden arrangement.</p>
 				</div>
 				<div class="col-lg-4">
 					<a href="grills.html" style="color:inherit; text-decoration: none;">
 						<img class="img-circle" src="images/grill1.png" alt="Grill" width="200" height="175">
 						<h1>Grills</h1>
 					</a>
-					<p>Cal Flame Grills are the hottest looking grills on the market, and the best performing. With designer knobs, exclusive V-shaped grates and polished stainless steel construction, looks alone can sear your steak.</p>
+					<p>Tropicana offers the hottest looking grills on the market with the best performance. With designer knobs, exclusive V-shaped grates and polished stainless steel construction, looks alone can sear your steak.</p>
 				</div>
 				<div class="col-lg-4">
 					<a href="spas.html" style="color:inherit; text-decoration: none;">
