--- a/grills/allegra-32-rostisserie.html
+++ b/grills/allegra-32-rostisserie.html
@@ -5,14 +5,14 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Specializes in BBQ Islands, Allegra Grills, and Cal Spas">
-    	<link rel="icon" href="images/tropicana_icon.png">
+    	<link rel="icon" href="../images/tropicana_icon.png">
 
     	<title>Tropicana Outdoor Living</title>
 
-    	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    	<link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
 
-    	<link rel="stylesheet" type="text/css" href="css/tropicana.css">
-    	<script type="text/javascript" src="js/tropicana.js"></script>
+    	<link rel="stylesheet" type="text/css" href="../css/tropicana.css">
+    	<script type="text/javascript" src="../js/tropicana.js"></script>
 	</head>
 
 	<body>
@@ -29,50 +29,50 @@
 								<span class="icon-bar"></span>
 							</button>
 
-							<a href="index.html"><img src="images/TropicanaLogo.png" alt="Tropicana" height="58" width="145"></img></a>
+							<a href="../index.html"><img src="../images/TropicanaLogo.png" alt="Tropicana" height="58" width="145"></img></a>
 						</div>
 						<div id="navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav">
-                				<li><a href="index.html">Home</a></li>
-                				<li class="active dropdown hidden-xs"><a href="grills.html"role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
+                				<li><a href="../index.html">Home</a></li>
+                				<li class="active dropdown hidden-xs"><a href="../grills.html"role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
-                						<li><a href="grills.html#lion">Lion</a></li>
-                						<li><a href="grills.html#cal-flame">Allegra</a></li>
-                						<li><a href="grills.html#fire-magic">Fire Magic</a></li>
+                						<li><a href="../grills.html#lion">Lion</a></li>
+                						<li><a href="../grills.html#cal-flame">Allegra</a></li>
+                						<li><a href="../grills.html#fire-magic">Fire Magic</a></li>
                 					</ul>
                 				<li class="active dropdown hidden-lg hidden-md hidden-sm"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Grills<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
-                						<li><a href="grills.html#lion">Lion</a></li>
-                						<li><a href="grills.html#cal-flame">Allegra</a></li>
-                						<li><a href="grills.html#fire-magic">Fire Magic</a></li>
+                						<li><a href="../grills.html#lion">Lion</a></li>
+                						<li><a href="../grills.html#cal-flame">Allegra</a></li>
+                						<li><a href="../grills.html#fire-magic">Fire Magic</a></li>
                 					</ul>
                 				</li>
                 				<li class="dropdown hidden-lg hidden-md hidden-sm"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Patio<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
-                						<li><a href="patio.html#darlee">Darlee</a></li>
-                						<li><a href="patio.html#summerset">Summerset</a></li>
+                						<li><a href="../patio.html#darlee">Darlee</a></li>
+                						<li><a href="../patio.html#summerset">Summerset</a></li>
                 					</ul>
                 				</li>
-                				<li class="dropdown hidden-xs"><a href="patio.html"  role="button" aria-haspopup="true" aria-expanded="false">Patio<span class="caret"></span></a>
+                				<li class="dropdown hidden-xs"><a href="../patio.html"  role="button" aria-haspopup="true" aria-expanded="false">Patio<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
-                						<li><a href="patio.html#darlee">Darlee</a></li>
-                						<li><a href="patio.html#summerset">Summerset</a></li>
+                						<li><a href="../patio.html#darlee">Darlee</a></li>
+                						<li><a href="../patio.html#summerset">Summerset</a></li>
                 					</ul>
                 				</li>
                 				<li class="dropdown hidden-sm hidden-md hidden-lg"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Spas<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
-                						<li><a href="swim-spas.html">Swim Spas</a></li>
-                						<li><a href="cal-spas.html">Cal Spas</a></li>
+                						<li><a href="../swim-spas.html">Swim Spas</a></li>
+                						<li><a href="../cal-spas.html">Cal Spas</a></li>
                 					</ul>
                 				</li>
                 				<li class="dropdown hidden-xs"><a href="spas.html" role="button" aria-haspopup="true" aria-expanded="false">Spas<span class="caret"></span></a>
                 					<ul class="dropdown-menu">
-                						<li><a href="swim-spas.html">Swim Spas</a></li>
-                						<li><a href="cal-spas.html">Cal Spas</a></li>
+                						<li><a href="../swim-spas.html">Swim Spas</a></li>
+                						<li><a href="../cal-spas.html">Cal Spas</a></li>
                 					</ul>
                 				</li>
-                				<li><a href="contact.html">Contact</a></li>
-                				<li><a href="testimonies.html">Testimonies</a></li>
+                				<li><a href="../contact.html">Contact</a></li>
+                				<li><a href="../testimonies.html">Testimonies</a></li>
               				</ul>
 						</div>
 					</div>
@@ -91,7 +91,7 @@
 
 				<div class="row top-buffer">
 					<div class="col-xs-12 hidden visible-xs nopadding">
-						<img class="img-responsive" src="images/allegra/32”-allegra-grill-rostisserie.jpg" alt='32" Allegra Grill'>
+						<img class="img-responsive" src="../images/allegra/32-allegra-grill-rostisserie.jpg" alt='32" Allegra Grill'>
 					</div>
 					<div class="col-xs-12 col-sm-6  nopadding">
 						<ul>
@@ -113,8 +113,8 @@
 						</ul>
 					</div>
 					<div class="col-sm-6 hidden-xs nopadding">
-                        <a href='images/allegra/32-allegra-grill-rostisserie.jpg'>
-						  <img class="img-responsive" src="images/allegra/32-allegra-grill-rostisserie.jpg" alt='32" Allegra Grill'>
+                        <a href='../images/allegra/32-allegra-grill-rostisserie.jpg'>
+						  <img class="img-responsive" src="../images/allegra/32-allegra-grill-rostisserie.jpg" alt='32" Allegra Grill'>
                         </a>
 					</div>
 
